--- a/capstone/whisper-market/package.json
+++ b/capstone/whisper-market/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
     "circomlib": "^2.0.5",
-    "circomlibjs": "^0.1.7"
+    "circomlibjs": "^0.1.7",
+    "circom_tester": "^0.0.19"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
