--- a/capstone/whisper-market/package.json
+++ b/capstone/whisper-market/package.json
@@ -6,14 +6,19 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
+    "circom_tester": "^0.0.20",
     "circomlib": "^2.0.5",
     "circomlibjs": "^0.1.7",
-    "circom_tester": "^0.0.19"
+    "ed2curve": "^0.3.0",
+    "snarkjs": "^0.7.4",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
+    "@types/node": "^22.5.4",
+    "@types/snarkjs": "^0.7.8",
     "chai": "^4.3.4",
     "mocha": "^9.0.3",
     "prettier": "^2.6.2",
