Add public keys fileds for encryption

--- a/capstone/whisper-market/tsconfig.json
+++ b/capstone/whisper-market/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["es2020", "dom"],
     "module": "commonjs",
     "target": "es6",
+    "resolveJsonModule": true,
     "esModuleInterop": true
   }
 }
