Switch to devnet

--- a/capstone/whisper-market/Anchor.toml
+++ b/capstone/whisper-market/Anchor.toml
@@ -7,6 +7,9 @@ skip-lint = false
 [programs.localnet]
 whisper_market = "AL8vd4XrR2xWLjHCsMUQHYnEtYR8BoMYXgySJGGkJSQ4"
 
+[programs.devnet]
+whisper_market = "AL8vd4XrR2xWLjHCsMUQHYnEtYR8BoMYXgySJGGkJSQ4"
+
 [registry]
 url = "https://api.apr.dev"
 
